[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scenes/Isometric/IsoRenderer/Renderer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Combat/DebugPanel/DebugPanel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Combat/HUD/ActionMenu/ActionMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Combat/IA/IA.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Combat/HUD/NinePatchRect/NinePatchRect.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Map/Map1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Combat/Timeline/Timeline.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Actors/Allies/Character.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Gauge/HUD_Gauge.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/StateGraph/StateMachine/PushdownAutomata/PushdownAutomata.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Combat/HUD/HUD.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Overlook.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Combat/CombatLoop.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Combat/MoveAnimationState.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Combat/TeamsContainer.gd" type="Script" id=15]
[ext_resource path="res://addons/StateGraph/StateMachine/StateMachine.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Attack.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Skills.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Items.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/WaitCombatState.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/ActiveActorInfos.gd" type="Script" id=21]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBorder.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/OptionChoice.gd" type="Script" id=24]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBackGround.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/EnemyTurn/IA_OverlookState.gd" type="Script" id=26]
[ext_resource path="res://Scenes/Combat/ActorTeam.gd" type="Script" id=28]
[ext_resource path="res://Scenes/Combat/HUD/ActionsLeft.gd" type="Script" id=29]
[ext_resource path="res://BabaGodotLib/Fonts/MediumPixel.tres" type="DynamicFont" id=30]
[ext_resource path="res://Scenes/Combat/ActionCombatState.gd" type="Script" id=31]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/TargetChoice.gd" type="Script" id=32]
[ext_resource path="res://Scenes/Combat/DamageContainer.gd" type="Script" id=33]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Actions/ActionLeft.tscn" type="PackedScene" id=34]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/DestinationChoice.gd" type="Script" id=35]
[ext_resource path="res://Scenes/UI/Menu/ActionMenu/ActionButton/ActionOption.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/AllyTurn.gd" type="Script" id=41]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 30 )

[node name="Level1" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}
fog_of_war = false

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 11 )

[node name="Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timeline" parent="HUD/Control" instance=ExtResource( 7 )]
position = Vector2( -0.0244002, 2.12211 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -273.0
margin_bottom = 173.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActorInfos" type="HBoxContainer" parent="HUD/Control/VBoxContainer"]
margin_right = 273.0
margin_bottom = 70.0
mouse_filter = 2
custom_constants/separation = 17
script = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActorData" type="HBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos"]
margin_right = 186.0
margin_bottom = 70.0
size_flags_horizontal = 10
custom_constants/separation = 35
__meta__ = {
"_edit_lock_": true
}

[node name="Altitude" type="Label" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData"]
margin_right = 24.0
margin_bottom = 16.0
size_flags_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Alt:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData"]
margin_left = 59.0
margin_right = 186.0
margin_bottom = 70.0
size_flags_horizontal = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Gauges" type="VBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats"]
margin_right = 127.0
margin_bottom = 36.0

[node name="HP" type="HBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges"]
margin_right = 127.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges/HP"]
margin_left = 1.0
margin_right = 21.0
margin_bottom = 16.0
size_flags_horizontal = 6
text = "HP"
valign = 1

[node name="Gauge" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges/HP" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 14.0
size_flags_horizontal = 8
size_flags_vertical = 4
gauge_color = Color( 0.862745, 0.156863, 0.156863, 1 )
feedback_gauge_color = Color( 0.52549, 0.0627451, 0.0313726, 1 )
shake_feedback_on = true

[node name="MP" type="HBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges"]
margin_top = 20.0
margin_right = 127.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges/MP"]
margin_right = 22.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "MP"
align = 1
valign = 1

[node name="Gauge" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/Gauges/MP" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 14.0
size_flags_horizontal = 9
size_flags_vertical = 4
gauge_color = Color( 0.239216, 0.639216, 0.74902, 1 )
feedback_gauge_color = Color( 0.0509804, 0.415686, 0.45098, 1 )

[node name="ActionsLeft" type="HBoxContainer" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats"]
margin_top = 40.0
margin_right = 127.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 4
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLeft" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/ActionsLeft" instance=ExtResource( 34 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_right = 113.0
margin_bottom = 10.0
size_flags_horizontal = 10

[node name="ActionLeft2" parent="HUD/Control/VBoxContainer/ActorInfos/ActorData/Stats/ActionsLeft" instance=ExtResource( 34 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_right = 127.0
margin_bottom = 10.0

[node name="PortraitContainer" type="CenterContainer" parent="HUD/Control/VBoxContainer/ActorInfos"]
margin_left = 203.0
margin_right = 273.0
margin_bottom = 70.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="TextureRect" parent="HUD/Control/VBoxContainer/ActorInfos/PortraitContainer"]
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="HUD/Control/VBoxContainer/ActorInfos/PortraitContainer"]
modulate = Color( 0.286275, 0.427451, 0.435294, 1 )
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portrait" type="TextureRect" parent="HUD/Control/VBoxContainer/ActorInfos/PortraitContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 35.0
margin_bottom = 35.0
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="HUD/Control/VBoxContainer/ActorInfos"]

[node name="ActionMenu" parent="HUD/Control/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 203.0
margin_top = 74.0
margin_right = 273.0
margin_bottom = 204.0
rect_min_size = Vector2( 70, 130 )
size_flags_horizontal = 8
menu_option_scene = ExtResource( 36 )
option_v_separation = -4
column_container_path = "ResizableWindow/MarginContainer/HBoxContainer"
max_lines = 10
max_columns = 1
window_texture = ExtResource( 5 )

[node name="DebugPanel" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -139.0
margin_right = 119.0
margin_bottom = 18.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimelineState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_right = 119.0
margin_bottom = 14.0
text = "Timeline State: "
__meta__ = {
"_edit_lock_": true
}

[node name="TurnType" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 119.0
margin_bottom = 32.0
text = "TurnType:"
__meta__ = {
"_edit_lock_": true
}

[node name="CombatState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 119.0
margin_bottom = 50.0
text = "CombatState:"
__meta__ = {
"_edit_lock_": true
}

[node name="CombatSubState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 54.0
margin_right = 119.0
margin_bottom = 68.0
text = "Combat SubState:"
__meta__ = {
"_edit_lock_": true
}

[node name="ActiveActor" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 72.0
margin_right = 119.0
margin_bottom = 86.0
text = "Active Actor:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActiveActorState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 72.0
margin_right = 119.0
margin_bottom = 86.0
text = "Active Actor State:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActiveActorPos" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 119.0
margin_bottom = 104.0
text = "Active Actor's Pos:"
__meta__ = {
"_edit_lock_": true
}

[node name="CursorMaxZ" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 108.0
margin_right = 119.0
margin_bottom = 122.0
text = "Cursor max_z:"
__meta__ = {
"_edit_lock_": true
}

[node name="CursorPos" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 126.0
margin_right = 119.0
margin_bottom = 157.0
text = "Cursor Pos:
"
__meta__ = {
"_edit_lock_": true
}

[node name="IA" parent="." instance=ExtResource( 4 )]

[node name="Renderer" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
z_index = 999
__meta__ = {
"_edit_lock_": true
}

[node name="CombatStatesMachine" type="Node2D" parent="."]
script = ExtResource( 16 )
standalone_trigger = {
}
no_default_state = true

[node name="PlayerTurn" type="Node2D" parent="CombatStatesMachine"]
script = ExtResource( 41 )
no_default_state = true

[node name="Overlook" type="Node" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 12 )
standalone_trigger = {
}

[node name="Move" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 10 )
no_default_state = true

[node name="DestinationChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Move"]
script = ExtResource( 35 )

[node name="MoveAnimation" type="Node" parent="CombatStatesMachine/PlayerTurn/Move"]
script = ExtResource( 14 )

[node name="Attack" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 17 )
no_default_state = true
reset_to_default = true

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Attack"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Attack"]
script = ExtResource( 31 )

[node name="Skill" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 18 )
no_default_state = true
reset_to_default = true

[node name="OptionChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 24 )

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 31 )

[node name="Item" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 19 )
no_default_state = true

[node name="OptionChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 24 )

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 31 )

[node name="Wait" type="Node" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 20 )

[node name="IATurn" type="Node2D" parent="CombatStatesMachine"]
script = ExtResource( 16 )
standalone_trigger = {
}
no_default_state = true

[node name="Overlook" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 26 )

[node name="Move" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 14 )

[node name="Attack" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 31 )

[node name="Skill" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 31 )

[node name="Item" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 31 )

[node name="Wait" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 20 )

[node name="DamageContainer" type="Node2D" parent="."]
script = ExtResource( 33 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="TeamsContainer" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Allies" type="Node2D" parent="TeamsContainer"]
script = ExtResource( 28 )
team_side = 0

[node name="Character" parent="TeamsContainer/Allies" instance=ExtResource( 8 )]
position = Vector2( 143.303, 192.551 )

[node name="Enemies" type="Node2D" parent="TeamsContainer"]
script = ExtResource( 28 )
team_side = 0
